media max 320px

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <div class="hero">
-        <div class="hero-text">
+    <div class="hero bg-image">
+        <div class="hero-text container">
             <h1 class="hero-title">Amazing early season conditions!</h1>
             <p class="paragraph">The 2020/21 ski season here at Breck has started off with a bang! These are the
                 best
@@ -20,38 +20,38 @@
         </div>
     </div>
     <section class="section section-1">
-        <div class="column column-1">
-            <h2 class="title">Win at Winter This Early Season</h2>
+        <div class="column column-1 container">
+            <h2 class="title section-title">Win at Winter This Early Season</h2>
             <p class="paragraph">Peak 9 is already open for the season providing incredible begginer to intermediate
                 terrain, if you're looking for some more advanced riding 6 Chair, the T-Bar, and E Chair are also open!
                 And did we happen to mention that the Imperial Lift is now open and opened earlier than ever before?
                 Check here for our latest terrain and conditions updates.</p>
             <a href="#" class="btn">read more</a>
         </div>
-        <div class="column column-2"></div>
+        <div class="column column-2 bg-image"></div>
     </section>
     <section class="section-2">
-        <div class="img-div img-div-1"></div>
-        <div class="img-div img-div-2"></div>
-        <div class="img-div img-div-3"></div>
-        <div class="img-div img-div-4"></div>
+        <div class="img-div img-div-1 bg-image"></div>
+        <div class="img-div img-div-2 bg-image"></div>
+        <div class="img-div img-div-3 bg-image"></div>
+        <div class="img-div img-div-4 bg-image"></div>
     </section>
     <section class="section-4">
-        <div class="column-1 column-text">
+        <div class="column-1 column-text container">
             <h2 class="title">One State. 14 resorts</h2>
             <p class="paragraph">And did we happen to mention that the Imperial Lift is now open and opened earlier than
                 ever before?
                 Check here for our latest terrain and conditions updates.</p>
         </div>
-        <div class="column-2"></div>
-        <div class="column-3 column-text">
+        <div class="column-2 bg-image"></div>
+        <div class="column-3 column-text container">
             <h2 class="title">Action mount penken</h2>
             <p class="paragraph">Last chance to lock in the 2020/21 season! The Epic Pass allows access to Brekenrige
                 and 18 others resorts, including the recently added Okenomo</p>
         </div>
     </section>
     <section class="section-5">
-        <div class="column-1"></div>
+        <div class="column-1 bg-image"></div>
         <div class="column-2"></div>
         <div class="column-floating">
             <h2 class="title">Leisure Mount Ahorn</h2>
@@ -62,7 +62,7 @@
         </div>
     </section>
     <section class="section-6">
-        <div class="column column-1">
+        <div class="column column-1 container">
             <h2 class="title">cherry peak</h2>
             <p class="paragraph">Opened in 2014, Cherry Peak is Utah's newest ski arena. It is located just 15 miles
                 from Logan, near the Idaho border. The family-owned, nearly 400-acre resort, features three triple
@@ -70,7 +70,7 @@
                 opened a three-story day Grand Lodge that hosts events year-round</p>
             <a href="#" class="btn">read more</a>
         </div>
-        <div class="column column-2">
+        <div class="column column-2 container">
             <h2 class="title">Deer Valley Resort</h2>
             <p class="paragraph">As one of Utah's most popular luxury mountain resort (in the summer, too), Deer Valley
                 Resort goes out of its way to ensure the best skiing experience possible. Some would argue it is
@@ -79,7 +79,7 @@
             <a href="#" class="btn">read more</a>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer container">
         <div class="column-1">
             <form action="">
                 <div class="form-row">
@@ -108,7 +108,7 @@
                 </li>
             </ul>
             <div class="info">
-                <h3>Questions or Comments?</h3>
+                <h3 class="title">Questions or Comments?</h3>
                 <p>Contact us from 8 a.m. to 5 p.m. seven days a week.</p>
             </div>
     </footer>
